# GameHSTGAT

./: .gitignore  MODEL_README.md  Proposal.md  README.md  RELEASE_CHECKLIST.md  index.html  pyproject.toml
Beispiel für slurms/: job.sh  run_batch_slurms.sh
artifacts/: grid_summary_fair.json  grid_summary_vector.json  metrics_summary_fair.csv  metrics_summary_fair_aggregated.csv  metrics_summary_fair_aggregated.json  metrics_summary_majority.csv  metrics_summary_majority_aggregated.csv  metrics_summary_vector.csv  metrics_summary_vector_aggregated.csv  metrics_summary_vector_aggregated.json
configs/: default.yaml
docs/: n100-viewers.html  results-data.json  results.html  viewers.html
scripts/: _experiment_grid_common.sh  animate_episode.py  animate_majority_episode.py  export_results_data.py  finalize_grid.py  generate_anchor_t2_artifacts.py  plot_learning_rate_from_logs.py  refit_and_regenerate.py  render_all_animations.sh  render_majority_animations.sh  run_animate_fair_slurm.sh  run_animate_vector_slurm.sh  run_experiment_fair.sh  run_experiment_fair_slurm.sh  run_experiment_vector.sh  run_experiment_vector_slurm.sh  run_grid.py  run_grid_task.py  run_majority_baseline.py  run_majority_baseline_grid.py  run_replication.sh  summarize_metrics.py  train.py
src/: __init__.py  aggregate_plots.py  config.py  episode_animation.py  graph_generator.py  grid_refit.py  grid_summary.py  grid_tasks.py  hst_bound.py  learning_rate_plots.py  logging_utils.py  majority_vote_baseline.py  metrics_aggregate.py  reporting.py  signal_generator.py  train_loss_plots.py  (+1 more)
(+507 files in other folders)
