[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-theory-project"
version = "0.1.0"
description = "Graph-based social learning experiments with PyTorch Geometric."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "networkx",
    "torch",
    "torch-geometric",
    "wandb",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
